force-app/main/default/objects/FactorWiseLog__e/FactorWiseLog__e.object-meta.xml
<CustomObject>
    <label>FactorWiseLog</label>
    <pluralLabel>FactorWiseLogs</pluralLabel>
</CustomObject>