force-app/main/default/objects/FactorWiseLog__e/fields/className__c.field-meta.xml
<CustomField>
    <fullName>className__c</fullName>
    <label>className</label>
    <length>255</length>
    <type>Text</type>
</CustomField>