force-app/main/default/objects/FactorWiseLog__e/fields/level__c.field-meta.xml
<CustomField>
    <fullName>level__c</fullName>
    <label>level</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>