force-app/main/default/objects/FactorWiseLog__e/fields/metadata__c.field-meta.xml
<CustomField>
    <fullName>metadata__c</fullName>
    <label>metadata</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>