force-app/main/default/objects/FactorWiseLog__e/fields/quiddity__c.field-meta.xml
<CustomField>
    <fullName>quiddity__c</fullName>
    <label>quiddity</label>
    <length>128</length>
    <type>Text</type>
</CustomField>