force-app/main/default/objects/FactorWiseLog__e/fields/transactionId__c.field-meta.xml
<CustomField>
    <fullName>transactionId__c</fullName>
    <label>transactionId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>