force-app/main/default/objects/FactorWiseLog__e/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>log or metric</description>
    <label>type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>