force-app/main/default/objects/FactorWiseLog__e/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>